<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/spiration_dark"
    tools:context="com.rajesh.myplayer.PlayerActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_close_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="7dp"
            android:contentDescription="@string/close"
            android:background="@drawable/close" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="7dp"
            android:textStyle="bold"
            android:text="@string/song"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:text="Hello"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/iv_music_cover"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:scaleType="fitXY"
        android:contentDescription="@string/cover"
        android:src="@drawable/cover_image" />

    <LinearLayout
        android:id="@+id/ll_artist"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:orientation="horizontal"
        android:background="@color/black"
        android:gravity="center"
        android:padding="14dp">

        <TextView
            android:id="@+id/textView_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/artist"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView_artist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Hello"
            android:textColor="@color/white"
            android:textSize="12sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_gray"
        android:orientation="vertical">

        <SeekBar
            android:id="@+id/seekBar_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:layout_marginTop="14dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_start_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="00:00:00"
                android:layout_marginStart="7dp"
                android:layout_marginEnd="7dp"
                android:textColor="@color/black"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/tv_total_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/black"
                android:layout_marginStart="7dp"
                android:layout_marginEnd="7dp"
                android:text="00:00"/>

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:progressTint="@color/light_gray"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_rewind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="14dp"
            android:contentDescription="@string/rewind"
            android:src="@drawable/ic_fast_rewind" />

        <ImageView
            android:id="@+id/iv_play_song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="14dp"
            android:contentDescription="@string/play"
            android:src="@drawable/ic_play_arrow_black" />

        <ImageView
            android:id="@+id/iv_pause_song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="14dp"
            android:contentDescription="@string/play"
            android:src="@drawable/ic_pause_black"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/iv_forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="14dp"
            android:contentDescription="@string/forward"
            android:src="@drawable/ic_fast_forward" />

    </LinearLayout>


</LinearLayout>
