<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/spiration_dark"
    android:orientation="vertical"
    tools:context="com.rajesh.myplayer.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="21dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/play_circle"
            android:src="@drawable/play_leaf" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/play_studio"
            android:layout_gravity="center|bottom"
            android:textSize="25sp"
            android:padding="5dp"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_show_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/history"
            android:layout_gravity="center"
            android:gravity="end"
            android:textSize="13sp"
            android:padding="5dp" />

    </LinearLayout>

    <android.support.v7.widget.SearchView
        android:id="@+id/sv_songs"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="8dp"
        android:background="@drawable/border_rectangle_search" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:progressTint="@color/light_gray"
        android:visibility="gone"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_song_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:background="@color/light_gray"
        android:scrollbarStyle="insideInset"
        android:paddingBottom="16dp"
        android:paddingTop="16dp" />

</LinearLayout>
