<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/ll_song"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="3dp"
    android:layout_marginEnd="7dp"
    android:layout_marginStart="7dp"
    android:background="@drawable/border_rectangle"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_cover_image"
            android:layout_width="78dp"
            android:layout_height="78dp"
            android:contentDescription="@string/cover"
            android:padding="7dp"
            android:scaleType="fitXY"
            android:src="@drawable/star" />

        <ImageView
            android:id="@+id/iv_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:contentDescription="@string/play"
            android:padding="16dp"
            android:src="@drawable/play_circle_outline"
            android:visibility="visible" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="7"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="7dp">

            <TextView
                android:id="@+id/tv_song_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="5"
                android:text="Afreen Afreen"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Artist : "
                android:layout_marginLeft="7dp"
                android:textColor="@color/grey"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_artist_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="4"
                android:text="Afreen Afreen"
                android:textColor="@color/grey"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/iv_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:contentDescription="@string/download"
        android:padding="8dp"
        android:src="@drawable/arrow_collapse_down" />

</LinearLayout>